--- a/src/styles.css
+++ b/src/styles.css
@@ -5,14 +5,16 @@
 
 @tailwind utilities;
 
+html {
+  overflow-x: hidden;
+}
+
 :root {
   --secondary: #0062bf;
   --fg-color: rgba(255, 255, 255, 0.9);
   --bg-color: #2b2b2b;
   --highlight-primary: #008aff;
   --gradient: linear-gradient(300deg, #ba4aff, rgba(186, 74, 255, 0) 70%),
-
-  --nav-height: 150px;
 
   --transition: 250ms ease-out;
   --transition-long: 500ms ease-out;
@@ -23,8 +25,10 @@
   place-content: center;
 }
 
+
+
 header, footer {
-  height: var(--nav-height);
+  height: 100px;
 
   background: var(--bg-color);
   color: var(--fg-color);
@@ -92,6 +96,80 @@ header a:hover {
   display: none;
 }
 
+/* ------------- SLIDER COMPONENT BEGIN ------------- */
+
+/* .slider-container {
+  margin-top: 100px;
+} */
+
+.arrow-container {
+  position: absolute;
+  width: 99vw;
+  
+  top: calc(50vh - 100px);
+  z-index: 100;
+  
+  color:var(--fg-color);
+  font-size: 100px;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.arrow {
+  cursor: pointer;
+}
+
+.left-arrow {
+  margin-left: 30px;
+}
+
+.right-arrow {
+  margin-right: 30px;
+  transform: rotate(180deg);
+}
+
+.slider-container img {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.img-and-dot-container img {
+  filter: brightness(0.2);
+}
+
+.dots-container {
+  width: 100vw;
+
+  z-index: 100;
+  
+  position: absolute;
+  top: calc(100vh - 60px);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dot {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  margin: 0 5px;
+  /* background-color: var(--fg-color); */
+  background-color: red;
+  cursor: pointer;
+}
+
+.current-slide {
+  height: 30px;
+  width: 30px;
+}
+
+/* ------------- SLIDER COMPONENT END ------------- */
+
 footer {
   box-shadow: 0px 0px 8px 0px rgb(0 0 0 / 80%);
   border-top: 1px solid var(--highlight-primary);
@@ -119,8 +197,8 @@ footer {
 
   .toggle-phone-nav {
     position: fixed;
-    bottom: 5%;
-    right: 5%;
+    bottom: 70px;
+    right: 15px;
     display: block;
     height: 50px;
     width: 50px;
@@ -138,9 +216,9 @@ footer {
   .phone-nav {
     display: flex;
     position: fixed;
-    bottom: 0%;
-    height: 30%;
-    right: 16%;
+    bottom: 60px;
+    height: 40%;
+    left: 0%;
     background-color: var(--bg-color);
     transition: bottom 0.5s ease-in-out;
   }
@@ -154,4 +232,21 @@ footer {
   .hidden-phone-nav {
     bottom: -50%;
   }
+
+  footer {
+    height: 60px;
+  }
+
+  footer .logo-footer {
+    display: none;
+  }
+
+  footer .footer-links-nav {
+    width: 100%;
+  }
+}
+
+
+header {
+  display: none;
 }
