--- a/src/styles.css
+++ b/src/styles.css
@@ -98,9 +98,9 @@ header a:hover {
 
 /* ------------- SLIDER COMPONENT BEGIN ------------- */
 
-/* .slider-container {
-  margin-top: 100px;
-} */
+.slider-container {
+  position: relative;
+}
 
 .arrow-container {
   position: absolute;
@@ -109,7 +109,6 @@ header a:hover {
   top: calc(50vh - 100px);
   z-index: 100;
   
-  color:var(--fg-color);
   font-size: 100px;
 
   display: flex;
@@ -118,15 +117,20 @@ header a:hover {
 
 .arrow {
   cursor: pointer;
+
 }
 
-.left-arrow {
+#left-arrow {
   margin-left: 30px;
+  width: 100px;
+  height: 100px;
 }
 
-.right-arrow {
+#right-arrow {
   margin-right: 30px;
   transform: rotate(180deg);
+  width: 100px;
+  height: 100px;
 }
 
 .slider-container img {
@@ -232,6 +236,50 @@ footer {
   .hidden-phone-nav {
     bottom: -50%;
   }
+
+/* ------------- SLIDER COMPONENT BEGIN ------------- */
+
+  .slider-container {
+    margin-top: 100px;
+  }
+
+  .slider-container img {
+    height: 25vh;
+  }
+
+  .arrow-container {
+    top: calc(50% - 25px);
+    /* top: 0 */
+  }
+
+  #left-arrow {
+    margin-left: 10px;
+    width: 50px;
+    height: 50px;
+  }
+  
+  #right-arrow {
+    margin-right: 10px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .dots-container {
+    top: calc(100% - 30px);
+  }
+
+  .dot {
+    height: 10px;
+    width: 10px;
+    margin: 0 7px;
+  }
+
+  .current-slide {
+    height: 20px;
+    width: 20px;
+  }
+
+/* ------------- SLIDER COMPONENT END ------------- */
 
   footer {
     height: 60px;
