feat: :sparkles: Slider&Header
Added the title of the video on the slider; Made the slider responsiv (better than before); made the header appear on scroll with a hook useScrollPosition

none

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,11 @@ header {
   box-shadow: -2px 2px 8px 0px rgb(0 0 0 / 80%);
 
   border-bottom: 1px solid var(--highlight-primary);
-  
+  transition: top 0.3s ease-in-out;
+}
+
+.hidden-nav-bar {
+  top: -100px;
 }
 
 header ul {
@@ -131,6 +135,16 @@ header a:hover {
   transform: rotate(180deg);
   width: 100px;
   height: 100px;
+}
+
+.title-video {
+  position: absolute;
+  top: 70%;
+  width: 100%;
+  text-align: center;
+  z-index: 1000;
+  color: var(--fg-color);
+  font-size: 60px;
 }
 
 .slider-container img {
@@ -239,9 +253,9 @@ footer {
 
 /* ------------- SLIDER COMPONENT BEGIN ------------- */
 
-  .slider-container {
+  /* .slider-container {
     margin-top: 100px;
-  }
+  } */
 
   .slider-container img {
     height: 25vh;
@@ -262,6 +276,11 @@ footer {
     margin-right: 10px;
     width: 50px;
     height: 50px;
+  }
+
+  .title-video {
+    top: 65%;
+    font-size: 20px;
   }
 
   .dots-container {
@@ -295,6 +314,6 @@ footer {
 }
 
 
-header {
+/* header {
   display: none;
-}
+} */
