--- a/src/styles.css
+++ b/src/styles.css
@@ -137,8 +137,8 @@ header a:hover {
 .title-video {
   position: absolute;
   top: 70%;
-  width: 100%;
-  text-align: center;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 100;
   color: var(--fg-color);
   font-size: 60px;
@@ -217,6 +217,10 @@ header a:hover {
   position: absolute;
   cursor: pointer;
   z-index: 101;
+}
+
+.hidden-arrow {
+  display: none;
 }
 
 #carousel-left-arrow {
@@ -428,7 +432,7 @@ footer {
   }
 
   .title-video {
-    top: 10.5vh;
+    top: 13%;
     font-size: 20px;
   }
 
@@ -478,6 +482,10 @@ footer {
   .link-img-carousel {
     z-index: 5;
     top: 75%;
+  }
+
+  .carousel-container {
+    height: 30vh;
   }
 
   /* ------------- CAROUSEL COMPONENT START --------- */
