--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,3 +1,52 @@
+.desc {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  transition: opacity 0.3s;
+  opacity: 0;
+}
+
+.desc h2 {
+  margin-bottom: 0.5rem;
+  font-size: 1.125rem;
+  font-weight: 600;
+  color: #059669;
+}
+
+.desc p {
+  font-size: 0.875rem;
+  color: #374151;
+}
+
+.desc button {
+  padding: 0.375rem 1.5rem;
+  margin-top: 1rem;
+  font-size: 0.875rem;
+  font-weight: 600;
+  color: #fff;
+  background-color: #dc2626;
+  border-radius: 0.375rem;
+}
+
+.card:hover img {
+  opacity: 0.5;
+}
+
+.card:hover .desc {
+  opacity: 1;
+}
+
+.duration {
+  font-size: small;
+}
+
 .blur-bg {
   backdrop-filter: blur(8px);
 }
